# NiceGL

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
nicegl/: color.h  index_buffer.h  material.h  nicegl.h  program.h  renderable.h  renderer.h  renderer2d.h  shader.h  sprite_batch.h  texture.h  texture_manager.h  vertex_array.h  vertex_buffer.h  vertex_data.h
shaders/: test.fs  test.shader
tests/: application.h  color_application.h  projection_application.h  square_application.h  tests.h  texture_application.h  triangle_application.h
